fix: Set selector dropdown overlap

--- a/src/app.css
+++ b/src/app.css
@@ -48,3 +48,7 @@ body {
 .force-menu {
     max-height: 20vh !important;
 }
+
+.set-menu {
+    max-height: 336px !important;
+}
